# hello-rusty-web

./: Cargo.toml  README.md
src/: main.rs
static/: admin.html
templates/: greeting.html  hello_name.html
