[package]
name = "hello-web"
version = "0.1.0"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-session = "0.4.0"
actix-files = "0.5.0"
askama = "0.10"
chrono = "0.4"
http = "0.2"
env_logger = "0.8.2"
url = "2.2.0"
