[package]
name = "hello-web"
version = "0.1.0"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.3"
actix-session = "0.4.1"
actix-files = "0.5.0"
askama = "0.11.0"
chrono = "0.4.19"
http = "0.2.6"
env_logger = "0.9.0"
url = "2.2.2"
