[package]
name = "hello-web"
version = "0.1.0"
authors = ["Andrew Radev <andrey.radev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
askama = "0.11.1"
chrono = "0.4.23"
http = "0.2.8"
env_logger = "0.10.0"

[dev-dependencies]
url = "2.3.1"
